# layernorm-concept-assoc-dbdc-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  notes_deep_reads.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_search_results/: all_papers.json  layer_normalization_creativity_language_models_concept_association_20260426_024444.jsonl  layer_normalization_transformer_geometry_latent_space_20260426_024849.jsonl  neural_network_creativity_diversity_sampling_temperature_20260426_024852.jsonl  removing_layer_normalization_transformer_pre-norm_post-norm_20260426_025449.jsonl  search1.json  search2.json  search3.json  search4.json  search5.json  selected_papers.json  selected_with_pdfs.json  transformer_interpretability_concept_neurons_probing_20260426_025340.jsonl
papers/: README.md
results/: comparison_dat_EleutherAI_pythia-410m_topp.csv  comparison_dat_gpt2-medium_topp.csv  comparison_dat_gpt2_greedy.csv  comparison_dat_gpt2_high_t.csv  comparison_dat_gpt2_topp.csv  dat_EleutherAI_pythia-410m_topp.json  dat_gpt2-medium_topp.json  dat_gpt2_greedy.json  dat_gpt2_high_t.json  dat_gpt2_topp.json  geometry_EleutherAI_pythia-410m.json  geometry_gpt2-medium.json  geometry_gpt2.json  paired_geometry_EleutherAI_pythia-410m.json  perplexity_gpt2.json  (+15 more)
(+30 files in other folders)
