[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for LayerNorm and concept association"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1,<2.6",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]
